syntax = "proto3";

message ChatMessage {
  message UserMessage {
    string content = 1;
    int32 role = 2;
    string messageId = 13;
  }

  message Instructions {
    string instruction = 1;
  }

  message Model {
    string name = 1;
    bytes empty = 4;
  }

  repeated UserMessage userMessages = 2;
  Instructions instructions = 4;
  Model model = 7;
  int32 unknown13 = 13;
  string conversationId = 15;
  int32 unknown16 = 16;
  int32 unknown29 = 29;
  int32 unknown31 = 31;
}

message ResMessage {
  string content = 1;
  bytes empty = 4;
  string prompt = 5;
}

message AvailableModelsResponse { 
		message AvailableModel {
			string name = 1;
			bool default_on = 2;
			optional bool is_long_context_only = 3;
			optional bool is_chat_only = 4;
		}
	repeated AvailableModel models = 2;
	repeated string model_names = 1;
}
